🐛 Fix layout of footer-contact-item on mobile

--- a/style.css
+++ b/style.css
@@ -1729,15 +1729,11 @@ address {
     .footer-contact-item:nth-child(odd) {
       border-right: 1px solid var(--color-border); }
     .footer-contact-item a {
-      position: relative;
-      width: 100%; }
+      display: flex;
+      flex-direction: column; }
       .footer-contact-item a i {
         display: block;
-        padding-bottom: 100px; }
-      .footer-contact-item a span {
-        position: absolute;
-        right: 0;
-        bottom: 0; }
+        margin-bottom: 100px; }
   .footer-copyright span,
   .footer-copyright p {
     font-size: 12px;
