--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -61,18 +61,12 @@
     }
 
     a {
-      position: relative;
-      width: 100%;
+      display: flex;
+      flex-direction: column;
 
       i {
         display: block;
-        padding-bottom: 100px;
-      }
-
-      span {
-        position: absolute;
-        right: 0;
-        bottom: 0;
+        margin-bottom: 100px;
       }
     }
   }
